# Voice-Loopback

./: LICENSE  README.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/kotlin/com/example/voice_loopback/: AudioLoopbackService.kt  MainActivity.kt
ios/Runner/: Info.plist
lib/: main.dart
linux/: CMakeLists.txt
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
voice_loopback/: pubspec.yaml
voice_loopback/android/app/: build.gradle.kts
voice_loopback/android/app/src/main/: AndroidManifest.xml
voice_loopback/ios/Runner.xcodeproj/: project.pbxproj
voice_loopback/lib/: main.dart
voice_loopback/linux/runner/: my_application.cc
voice_loopback/macos/Runner.xcodeproj/: project.pbxproj
voice_loopback/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
voice_loopback/web/: index.html  manifest.json
voice_loopback/windows/: CMakeLists.txt
voice_loopback/windows/runner/: Runner.rc
windows/runner/: main.cpp
